# torchdetect

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: code-format.yml
.github/workflows/: ci-tests.yml  code-format.yml  python-package.yml
requirements/: dev.txt  requirements.txt
tests/losses/: test_iou_loss.py
tests/metrics/: test_iou.py
torchdetect/losses/: __init__.py  iou_loss.py
torchdetect/metrics/: __init__.py  iou.py
torchdetect/model/: yolo.py
