[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
 |  \.github
 |  \.mypy_cache
 |  \.pytest_cache
 |  \.tox
 |  \.vscode
 |  __pycache__
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
