[metadata]
name = torchdetect
version = 0.1.0
url = https://github.com/briankosw/torchdetect
author = Brian Ko
author_email = briankosw@gmail.com
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
description = torchdetect
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  hydra-core
  torch
python_requires = >=3.6
packages = find:
